fix overflow

--- a/globalStyles.css
+++ b/globalStyles.css
@@ -11,6 +11,10 @@
     color: white;
 }
 
+body {
+    position: relative
+}
+
 :root{
     --red: #FF453A;
     --darkyellow: #FF9F0A;
@@ -59,7 +63,7 @@ textarea:focus{
 /* smaller device */
 @media only screen and (max-width: 404px) {  
     .cancel-btn{
-        top: 2.8rem;
+        top: 2rem;
     }  
     .cancel-btn > h4{
         font-size: 0.9rem;
